; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_util.c_get_name.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_util.c_get_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_BUFFER_OVERFLOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_name(i8** %0, i64* %1, i8** %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i8** %0, i8*** %4, align 8
  store i64* %1, i64** %5, align 8
  store i8** %2, i8*** %6, align 8
  %9 = load i8**, i8*** %4, align 8
  %10 = load i64*, i64** %5, align 8
  %11 = call i32 @safe_read(i8** %9, i64* %10, i64* %8, i32 8)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  br label %34

15:                                               ; preds = %3
  %16 = load i64*, i64** %5, align 8
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* %8, align 8
  %19 = icmp slt i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* @ERROR_BUFFER_OVERFLOW, align 4
  store i32 %21, i32* %7, align 4
  br label %34

22:                                               ; preds = %15
  %23 = load i8**, i8*** %4, align 8
  %24 = load i8*, i8** %23, align 8
  %25 = load i8**, i8*** %6, align 8
  store i8* %24, i8** %25, align 8
  %26 = load i64, i64* %8, align 8
  %27 = load i8**, i8*** %4, align 8
  %28 = load i8*, i8** %27, align 8
  %29 = getelementptr inbounds i8, i8* %28, i64 %26
  store i8* %29, i8** %27, align 8
  %30 = load i64, i64* %8, align 8
  %31 = load i64*, i64** %5, align 8
  %32 = load i64, i64* %31, align 8
  %33 = sub nsw i64 %32, %30
  store i64 %33, i64* %31, align 8
  br label %34

34:                                               ; preds = %22, %20, %14
  %35 = load i32, i32* %7, align 4
  ret i32 %35
}

declare dso_local i32 @safe_read(i8**, i64*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
